# cnb-wiki-dictionary

./: README.md  config.py  pyproject.toml  tasks.py
cnb_wiki_dictionary/clue_filter/: clue_token_filter.py  clue_tokens_extractor.py  compound_clue_filter.py
cnb_wiki_dictionary/dictionary_creator/: create_dict.py  create_dicts.py
cnb_wiki_dictionary/download/: caches.py
cnb_wiki_dictionary/dump_page_view_filter/: download_dump_page_views.py  filter.py
cnb_wiki_dictionary/page_views_download/: download.py
cnb_wiki_dictionary/summaries_download/: download.py  wiki_filter_3.py
cnb_wiki_dictionary/title_filter/: filter.py  title_classifier.py
cnb_wiki_dictionary/utils/: cardword_token_merger.py  is_proper.py  knownness.py  path_matcher.py  process_summary.py  spacy.py  title.py  utils.py  word_forms.py
tests/data/: clue_tokens_extractor.json  title_filter.json  variants_extractor.json
tests/tests/: test_clue_tokens_extractor.py  test_dump_page_view_filter.py  test_title_filter.py  test_word_forms.py
tools/: spacy.py  spacy_ner.py
